Fix issue with navigation on tablets

--- a/assets/src/scss/components/_site-navigation.scss
+++ b/assets/src/scss/components/_site-navigation.scss
@@ -13,6 +13,14 @@
     }
 }
 
+// Fix navigation alignment on tablets
+@media only screen and (max-width: 1200px) {
+    .site-header .inside-header .main-navigation.sub-menu-right {
+        margin-left: 0 !important;
+        width: auto;
+    }
+}
+
 .main-navigation a {
     font-size: 1rem;
 }
